--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Full Name Rotation is a web system project created for the midterm exam of the Web System subject. The purpose of this project is to allow users to rotate their full name in various directions.">
-  <meta name="keywords" content="Jhon Keneth Ryan B. Namias, Jhon Keneth Namias, PP Namias onepage, PP Namias developer, PP Namias resume, cv, PP Namias personal,PP Namias portfolio, PP Namias personal resume, PP Namias clean, PP-Namias, PP_Namias, Full Name Rotation">
+  <meta name="description" content="Login with Google - Google Authentication with Firebase, Built using a native tech stack of HTML, CSS, and JavaScript.">
+  <meta name="keywords" content="Jhon Keneth Ryan B. Namias, Jhon Keneth Namias, PP Namias onepage, PP Namias developer, PP Namias resume, cv, PP Namias personal,PP Namias portfolio, PP Namias personal resume, PP Namias clean, PP-Namias, PP_Namias, Login with Google">
   <meta name="author" content="PP-Namias">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:url" content="https://pp-namias.github.io/Full-Name-Rotation/">
+  <meta property="og:url" content="https://pp-namias.github.io/Login-with-Google/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="PP Namias | Full Name Rotation"/> 
-  <meta property="og:image" content="https://pp-namias.github.io/Full-Name-Rotation/img/screenshot.jpeg"/>
-  <meta property="og:image:alt" content="PP Namias | Full Name Rotation">
-  <meta property="og:description" content="Full Name Rotation - is a web system project created for the midterm exam of the Web System subject. The purpose of this project is to allow users to rotate their full name in various directions."/>
+  <meta property="og:title" content="PP Namias | Login with Google"/> 
+  <meta property="og:image" content="https://pp-namias.github.io/Login-with-Google/img/screenshot.jpeg"/>
+  <meta property="og:image:alt" content="PP Namias | Login with Google">
+  <meta property="og:description" content="Login with Google - Google Authentication with Firebase, Built using a native tech stack of HTML, CSS, and JavaScript."/>
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="pp-namias.github.io">
-  <meta property="twitter:url" content="https://pp-namias.github.io/Full-Name-Rotation/">
-  <meta name="twitter:title" content="PP Namias | Full Name Rotation">
-  <meta name="twitter:description" content="Full Name Rotation - is a web system project created for the midterm exam of the Web System subject. The purpose of this project is to allow users to rotate their full name in various directions.">
-  <meta name="twitter:image" content="https://pp-namias.github.io/Full-Name-Rotation/img/screenshot.jpeg">
+  <meta property="twitter:url" content="https://pp-namias.github.io/Login-with-Google/">
+  <meta name="twitter:title" content="PP Namias | Login with Google">
+  <meta name="twitter:description" content="Login with Google - Google Authentication with Firebase, Built using a native tech stack of HTML, CSS, and JavaScript.">
+  <meta name="twitter:image" content="https://pp-namias.github.io/Login-with-Google/img/screenshot.jpeg">
 
-  <title>PP Namias | Full Name Rotation</title>
+  <title>PP Namias | Login with Google</title>
 
   <link rel="icon" type="image/png" sizes="32x32" href="./img/pp namias.png">
   
@@ -38,7 +38,7 @@
     <div class="hero-container">
       <div class="midterm-text">
         <h1><span>Google</span> Authentication</h1>
-        <p>Google Authentication with Firebase, Built using a native tech stack of HTML, CSS, and JavaScript, </p>
+        <p>Google Authentication with Firebase, Built using a native tech stack of HTML, CSS, and JavaScript.</p>
       </div>
       <div class="login-container">
         <form id="loginForm">
@@ -54,7 +54,7 @@
         <button class="logout-btn">Logout</button>
       </div>
       <div class="attribution">
-        Activity for Webinar. Design inspired by the previous project "<a href="https://github.com/PP-Namias/Full-Name-Rotation">Full Name Rotation</a>". Coded by <a href="https://github.com/PP-Namias" target="_blank">PP Namias</a>.
+        Activity for Webinar. Design inspired by the previous project "<a href="https://github.com/PP-Namias/Login-with-Google">Login with Google</a>". Coded by <a href="https://github.com/PP-Namias" target="_blank">PP Namias</a>.
       </div>
     </div>
   </div>
