--- a/index.html
+++ b/index.html
@@ -54,13 +54,12 @@
         <button class="logout-btn">Logout</button>
       </div>
       <div class="attribution">
-        Activity for Webinar. Design inspired by the previous project "<a href="https://github.com/PP-Namias/Login-with-Google">Login with Google</a>". Coded by <a href="https://github.com/PP-Namias" target="_blank">PP Namias</a>.
+        Activity for Webinar. Design inspired by the previous project "<a href="https://github.com/PP-Namias/Full-Name-Rotation">Full Name Rotation</a>". Coded by <a href="https://github.com/PP-Namias" target="_blank">PP Namias</a>.
       </div>
     </div>
   </div>
 
   <script src="https://kit.fontawesome.com/1ee8f271b9.js"></script>
-  <script src="/js/script.js" defer type="module"></script>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js";
